--- a/index.css
+++ b/index.css
@@ -121,6 +121,8 @@ body {
     justify-content: center; /* Центрирайте хоризонтално */
     align-items: center; /* Центрирайте вертикално (ако имате височина) */
     height: 100vh; /* Изпълнете височината на екрана, за да центрирате вертикално */
+    
+    
 }
 
 /* Стил за правоъгълника */
@@ -134,6 +136,7 @@ body {
     max-width: 600px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: auto; /* Центрирайте в контейнера */
+    justify-content: space-around;
 }
 
 /* Стил за изображението */
@@ -168,8 +171,25 @@ body {
 }
 
 .more-info-btn:hover {
-    background-color: #0056b3;
+    background-color: #007BFF;
 }
+.bottom-button {
+    display: block; /* Прави бутона блочен елемент */
+    width: 40%; /* Ширина на бутона */
+    margin: 2% auto; /* Центрира бутона хоризонтално и добавя отстъп отгоре и отдолу */
+    padding: 1%; /* Вътрешно отстояние */
+    text-align: center; /* Центриране на текста в бутона */
+    background-color: #007BFF; /* Фон цвят на бутона */
+    color: white; /* Цвят на текста */
+    text-decoration: none; /* Премахва подчертаването */
+    border-radius: 5px; /* Заобляне на ъглите */
+    font-size: 1.4rem; /* Размер на текста */
+}
+
+.bottom-button:hover {
+    background-color: #007BFF; /* Цвят на бутона при задържане с мишката */
+}
+
 
 
      
