Редактиране на цвят

--- a/контакти.css
+++ b/контакти.css
@@ -164,7 +164,7 @@
     position: absolute;
     inset: 2px;
     border: 20px solid #c8d1ce;
-    background: #9fcfbf;
+    background: #a2b5ca;
 }
 @property --a 
 {
